--- a/src/app/modules/shared/components/nav/nav.component.scss
+++ b/src/app/modules/shared/components/nav/nav.component.scss
@@ -1,8 +1,8 @@
 .Nav {
     width: 100%;
-    position: relative;
     top: 0;
     &__Container {
+        position: relative;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -16,8 +16,7 @@
             border-radius: 12px;
             border: 0;
             filter: drop-shadow(0 3px 3px rgba(0, 0, 0, 0.2));
-            &:hover > &__List {
-                visibility:visible;
+            outline-style: none;
         }
     }
     &__List {
@@ -26,24 +25,24 @@
         justify-content: center;
         align-items: center;
         position: fixed;
+        z-index: 30;
         top: 58px;
         right: 15px;
         min-width: 210px;
         padding: 0 15px;
         background-color: #fff;
         border-radius: 12px;
-        visibility: hidden;
-        }
-        & > li {
+        list-style: none;
+        &>li {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            min-width:200px;
+            min-width: 200px;
             padding: 10px 0;
             border-bottom: 1px solid rgb(216, 224, 231);
         }
-        & > li:last-child {
+        &>li:last-child {
             height: 3px;
             width: 100%;
             border: 0;
