--- a/src/app/modules/student-page/student-page.component.html
+++ b/src/app/modules/student-page/student-page.component.html
@@ -1,15 +1,15 @@
 <div class="StudentPage">
     <div class="StudentPage__Container">
         <div class="StudentPage__Frame">
-            <span class="StudentPage__Class">{{this.$student.class}}</span>
+            <span class="StudentPage__Class">{{}}</span>
             <ul class="StudentPage__Info">
                 <li>
                     <span>姓名</span>
-                    <span>{{this.$student.name}}</span>
+                    <span>{{}}</span>
                 </li>
                 <li>
                     <span>分數</span>
-                    <span>{{this.$student.score}}</span>
+                    <span>{{}}</span>
                 </li>
             </ul>
         </div>
