main function(repair):student-page

--- a/src/app/modules/student-page/student-page.component.html
+++ b/src/app/modules/student-page/student-page.component.html
@@ -1,15 +1,17 @@
 <div class="StudentPage">
     <div class="StudentPage__Container">
         <div class="StudentPage__Frame">
-            <span class="StudentPage__Class">{{}}</span>
+            <span class="StudentPage__Class">{{this.student?.scoreClass}}</span>
             <ul class="StudentPage__Info">
                 <li>
                     <span>姓名</span>
-                    <span>{{}}</span>
+                    <span>{{this.student?.name}}</span>
                 </li>
                 <li>
                     <span>分數</span>
-                    <span>{{}}</span>
+                    <span [ngStyle]="{'color': this.student?.score > this.$student.averageScore ? 'blue' : 
+                        this.student?.score < this.$student.averageScore ? 'red' : 'white'
+                    }">{{this.student?.score}}</span>
                 </li>
             </ul>
         </div>
