--- a/src/app/modules/admin-page/admin-page.component.scss
+++ b/src/app/modules/admin-page/admin-page.component.scss
@@ -1,3 +1,4 @@
+
 .AdminPage {
     width: 100%;
     height: 100%;
@@ -7,14 +8,37 @@
     }
     &__Frame {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
         height: 270px;
-        width: 450px;
+        width: 435px;
+        padding-left: 15px;
         margin-top: 100px;
         border-radius: 25px;
         background-color: #fff;
+        &>span:nth-child(2) {
+            display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        }
+    }
+    &__Lable {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 70px;
+        height: 25px;
+        font-size: 14px;
+        color: #4260c2;
+        margin: 15px 0 0 10px;
+        // background-color: #4f6ed4;
+        border: 1px solid #4260c2;
+        border-radius: 12px;
     }
     &__Class {
         display: flex;
@@ -33,16 +57,17 @@
         padding-left: 15px;
         border-left: 1px solid rgb(237, 242, 255);
         list-style: none;
-        & > li {
+        &>li {
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
             padding: 5px 0;
-            & > span:first-child {
+            &>span:first-child {
                 font-size: 15px;
                 padding-bottom: 8px;
             }
-            & > input {
+            &>input {
                 width: 160px;
                 height: 30px;
                 padding-left: 15px;
@@ -51,12 +76,19 @@
                 border-radius: 8px;
                 outline: none;
             }
+            &>span:last-child {
+                position: absolute;
+                top: 70px;
+                right: 47px;
+                font-size: 13px;
+               color: rgb(233, 121, 121);
+            }
         }
-        & > li:last-child {
+        &>li:last-child {
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
-            & >  button {
+            &>button {
                 width: 70px;
                 height: 40px;
                 margin: 10px 50px 0 0;
@@ -67,7 +99,15 @@
                 color: rgb(255, 255, 255);
                 background-color: rgb(99, 165, 252);
                 outline: none;
-                            }
+            }
         }
+    }
+    &__LoginButtonOff {
+        cursor: none;
+        opacity: 40%;
+    }
+    &__LoginButtonOn {
+        cursor: pointer;
+        opacity: 100%;
     }
 }
