--- a/src/app/modules/shared/components/nav/nav.component.html
+++ b/src/app/modules/shared/components/nav/nav.component.html
@@ -1,10 +1,24 @@
 <div class="Nav">
     <div class="Nav__Container">
-        <input type="text" >
-        <ul class="Nav__List">
-            <li (click) = 'this.$student.setAdmin()'>管理員</li>
-            <li *ngFor ='let student of this.$student.students' (click) ='this.$student.setStudent(student.name, student.score)'>{{student.name}}</li>
-            <li></li>
-        </ul>
+        <div #tmenu>
+            <button (click)="this.expand(tmenu)">{{this.$student.currentClass?.id || '選擇班級'}}</button>
+            <ul *ngIf="this.isOpen" class="Nav__ClassList">
+                <li *ngFor='let class of this.$student.classes' (click)='this.setCurrentList(class)'>{{class.id}}</li>
+            </ul>
+        </div>
+        <div *ngIf="this.isOpen">
+            <ul class="Nav__AdminList">
+                <li>管理員</li>
+                <li *ngFor='let admin of this.$student.currentClass?.admins' (click)='this.isAdminPage(admin)'>
+                    {{admin.name}}</li>
+                <li></li>
+            </ul>
+            <ul class="Nav__StudentList">
+                <li>學生</li>
+                <li *ngFor='let student of this.$student.currentClass?.students' (click)='this.setStudentPage(student)'>
+                    {{student?.name}}</li>
+                <li></li>
+            </ul>
+        </div>
     </div>
 </div>
