--- a/src/app/modules/admin-page/admin-page.component.html
+++ b/src/app/modules/admin-page/admin-page.component.html
@@ -1,20 +1,26 @@
 <div class="AdminPage">
     <div class="AdminPage__Container">
         <div class="AdminPage__Frame">
-            <span class="AdminPage__Class">{{this.$student.class}}</span>
-            <ul class="AdminPage__Info">
-                <li>
-                    <span>姓名</span>
-                    <input type="text" placeholder="輸入姓名" [(ngModel)]='this.$student.name'>
-                </li>
-                <li>
-                    <span>分數</span>
-                    <input type="number" [(ngModel)]='this.$student.score'>
-                </li>
-                <li>
-                    <button (click)='this.$student.addStudent(this.$student.name, this.$student.score)'>加入</button>
-                </li>
-            </ul>
+            <span class="AdminPage__Lable">{{this.admin?.name}}</span>
+            <span>
+                <span class="AdminPage__Class"></span>
+                <ul class="AdminPage__Info">
+                    <li>
+                        <span>姓名</span>
+                        <input type="text" placeholder="輸入姓名" [(ngModel)]='this.name' (blur)='this.validName()'>
+                        <span>{{this.nameWarn}}</span>
+                    </li>
+                    <li>
+                        <span>分數</span>
+                        <input type="number" [(ngModel)]='this.score'>
+                        <!-- <span>{{this.scoreWarn}}</span> -->
+                    </li>
+                    <li>
+                        <!-- <button class="AdminPage__LoginButton{{!this.nameWarn&&!this.scoreWarn? On : Off}}" (click)='this.$student.addStudent(this.name, this.score)'>加入</button> -->
+                        <button (click)='this.$student.addCurrentStudent(this.name, this.score)'>加入</button>
+                    </li>
+                </ul>
+            </span>
         </div>
     </div>
 </div>
