--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
 html {
+  height: 100%;
+  width: 100%;
     padding: 0;
     margin: 0;
     background-color: rgb(103, 144, 255);
 }
 body {
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
 }
